Membership is basically done