@@ -1,21 +1,36 @@
 package distributed_system_project;
 
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.DatagramSocket;
+import java.net.InetAddress;
+import java.net.Socket;
+import java.net.SocketException;
+import java.net.UnknownHostException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
+import java.util.concurrent.ScheduledThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+
+
 import distributed_system_project.message.Message;
 import distributed_system_project.message.body_parsers.DeleteMessageBodyParser;
 import distributed_system_project.message.body_parsers.GetMessageBodyParser;
 import distributed_system_project.utilities.Pair;
 import distributed_system_project.utilities.ShaHasher;
 import distributed_system_project.utilities.SocketsIo;
-
-import java.io.*;
-import java.net.*;
-import java.nio.channels.ServerSocketChannel;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
-import java.security.NoSuchAlgorithmException;
-import java.util.*;
 
 
 public class Store {
@@ -31,12 +46,17 @@ public class Store {
     private final Integer storePort;
     private String storeId;
 
-    private final List<ArrayList<String>> cluster;
-    private PriorityQueue<String> last32Logs;
+    public static int UPDATE_CLUSTER_JOIN = 0;
+    public static int UPDATE_CLUSTER_LEAVE = 1;
+
+    public ScheduledThreadPoolExecutor periodicMembershipSender = null;
+
+    private List<ArrayList<String>> cluster;
+    private List<String> last32Logs;
     private final String membershipLog;
 
     //UDP cluster transport variables
-    private StoreUdpServer udpClusterServer;
+    private Thread udpClusterServer;
     private final String clusterIp;
     private final Integer clusterPort;
 
@@ -44,29 +64,21 @@ public class Store {
     private StoreTcpServer tcpConnectionServer;
 
 
+
     public Store(String storeIp, Integer storePort, String clusterIp, Integer clusterPort) {
         this.storeIp = storeIp;
         this.storePort = storePort;
         this.clusterIp = clusterIp;
         this.clusterPort = clusterPort;
-        this.last32Logs = new PriorityQueue<>();
+        this.last32Logs = new ArrayList<>();
 
-        try {
-            this.storeId = Encoder.encryptSHA(storeIp);
-        } catch (NoSuchAlgorithmException | UnsupportedEncodingException e1) {
-            // TODO Auto-generated catch block
-            e1.printStackTrace();
-        }
+        this.storeId = ShaHasher.getHashString(this.storeIp);
 
         //Creates Store Id
-
-
         this.folderLocation = "./node_db/" + storeId;
         this.membershipLog = this.folderLocation + "/membership_log.txt";
 
         this.cluster = new ArrayList<>();
-        this.cluster.add(new ArrayList<>(Arrays.asList(storeIp, String.valueOf(storePort), STARTING_MEMBERSHIP_COUNTER)));
-
 
         System.out.println("Creating TCP server");
         this.tcpConnectionServer = new StoreTcpServer(this, this.storeIp, storePort);
@@ -78,32 +90,126 @@ public class Store {
         File directory = new File(this.folderLocation);
         directory.mkdirs();
 
-        File membershipLog = new File(this.membershipLog);
+        this.readClusterInformationFromLog();
+
+        this.createClusterFromLogs();
+
+        //In case of crash and if this store was in cluster
+        //It will start with udp server on and 
+        if(this.getMembershipCounter()%2 ==0){
+            this.startUdpServer();
+        }
+
+    }
+
+
+    public List<String> getLast32Logs() {
+        return last32Logs;
+    }
+
+    /**
+     * Reads from the memebersip log file the membership information and stores it on the field last32Logs
+     * If such file is not found, it will create a new one
+     */
+    private void readClusterInformationFromLog(){
+        File file = new File(this.membershipLog);
+
         try {
-            membershipLog.createNewFile();
+            if(!file.createNewFile()){
+                FileInputStream fis = new FileInputStream(file);
+                BufferedReader br = new BufferedReader(new InputStreamReader(fis));
+                for(String tmp; (tmp = br.readLine()) != null;){
+                    addLog(tmp);
+                }
+
+                
+            }
         } catch (IOException e) {
             // TODO Auto-generated catch block
             e.printStackTrace();
         }
 
+
+    }  
+
+    /**
+     * Creates the cluster array from the last32Logs
+     */
+    private void createClusterFromLogs(){
+
+        for(String log: this.last32Logs){
+            String[] node = log.split(" ");
+            ArrayList<String> nodeInfo = new ArrayList<String>();
+            nodeInfo.add(node[0]);
+            nodeInfo.add(node[1]);
+
+            this.cluster.add(nodeInfo);
+
+        }
     }
 
+    /**
+     * Overwrites the membership log with the current cluster information
+     */
+    private void writeLogs(){
+        FileSystem.writeTextOnFile(this.membershipLog, this.last32Logs);
+    }
+    
+    /**
+     * Adds a new membership log to the last32Logs
+     * @param last32Logs
+     */
+    public void setLast32Logs(List<String> last32Logs) {
 
-    public PriorityQueue<String> getLast32Logs() {
-        return last32Logs;
+        for(String log : this.last32Logs){
+            this.addLog(log);
+        }
     }
 
+    /**
+     * Adds a log to the last32Logs
+     * In case a log of such store ip already exists, it is replaced
+     * This function changes the membership log and cluster
+     * @param log
+     */
+    public void addLog(String log) {  
 
-    public void setLast32Logs(PriorityQueue<String> last32Logs) {
-        this.last32Logs = last32Logs;
-    }
+        boolean changedLog = false;
+        String[] logInfo = log.split(" "); 
+        for(int i = 0; i< this.last32Logs.size(); i++){
+            String[] tmpInfo = this.last32Logs.get(i).split(" ");
 
-    public void addLog(String log) {
-        if (this.last32Logs.size() == 32) {
-            last32Logs.poll();
+            //If exists already on list, ends here
+            if(log.equals(this.last32Logs.get(i))){return;}
+
+            //If already has info on list but membership is different
+            if(logInfo[0].equals(tmpInfo[0]) && !logInfo[1].equals(tmpInfo[1])){
+                String newLog = logInfo[0] + " " + Math.max(Integer.parseInt(tmpInfo[1]), Integer.parseInt(logInfo[1]));   
+                this.last32Logs.set(i, newLog);
+                changedLog = true;
+                  
+                break;
+            }
+
         }
 
-        last32Logs.add(log);
+        //If not there, adds to the log
+        if(!changedLog)last32Logs.add(log);
+        this.createClusterFromLogs();
+        this.writeLogs();
+    }
+
+
+    public int getMembershipCounter(){
+        int count = -1;
+
+        for(String log : this.last32Logs){
+            List<String> tmpLog = FileSystem.logToInfo(log);
+            if(tmpLog.get(0).equals(this.storeIp)){
+                count = Integer.parseInt(tmpLog.get(1));
+            }
+        }
+        return count;
     }
 
 
@@ -115,7 +221,7 @@ public class Store {
         return STARTING_MEMBERSHIP_COUNTER;
     }
 
-    public StoreUdpServer getUdpServer() {
+    public Thread getUdpServer() {
         return this.udpClusterServer;
     }
 
@@ -142,45 +248,39 @@ public class Store {
         return cluster;
     }
 
-    /*
-    public boolean addNodeToCluster(String new_node_ip){
-
-        if(this.cluster.stream().anyMatch(node -> node.get(0).equals(new_node_ip))) {
-            this.cluster.add(new ArrayList<String>(Arrays.asList(new_node_ip, STARTING_MEMBERSHIP_COUNTER)));
-            return true;
-        }
-
-        updateClusterNode(new_node_ip);
-        return false;
-
-
+    public void setClusterNodes( List<ArrayList<String>> cluster ) {
+        this.cluster = cluster;
     }
-    */
 
-    public void addStoreToCluster(String storeIp, String membershipCounter) {
+    /**
+     * Updates the mmebership information of the store which ip is storeIp
+     * @param storeIp The ip address of the store
+     * @param joinOrLeave If the store is entering or leaving the cluster. If variable is 0 it is joining, if it is 1 it is leaving
+     */
+    public void updateStoreToCluster(String storeIp, int joinOrLeave) {
+        
+        for(int i = 0; i< last32Logs.size(); i++){
+            ArrayList<String> tmpLog = FileSystem.logToInfo(last32Logs.get(i));
 
-        for (ArrayList<String> list : this.cluster) {
-            if (list.get(0).equals(storeIp)) {
+            if(tmpLog.get(0). equals(storeIp)){
+                if(Integer.parseInt(tmpLog.get(1))%2 != joinOrLeave){
+                    String newLog = tmpLog.get(0) + " " + String.valueOf(Integer.parseInt(tmpLog.get(1))+1);
+                    addLog(newLog);
+                }
+
                 return;
             }
         }
 
-        ArrayList<String> store = new ArrayList<String>();
-        store.add(storeIp);
-        store.add(membershipCounter);
-
-
-        this.cluster.add(store);
-        String log = storeIp + " " + membershipCounter;
-        addLog(log);
-
-        FileSystem.writeOnFile(this.membershipLog, log);
+        //Case of joining the cluster of the first time
+        if(joinOrLeave == 0){
+            addLog(storeIp + " " + Store.STARTING_MEMBERSHIP_COUNTER);
+        }
+        
+        return;
+        
     }
 
-    public boolean updateClusterNode(String new_node_ip) {
-        return true;
-
-    }
 
     public String getMembershipLog() {
         return membershipLog;
@@ -320,17 +420,17 @@ public class Store {
 
         // get nodes with active counter
         List<ArrayList<String>> availableNodes =
-                new ArrayList<>(this.cluster.stream().filter(node -> Integer.parseInt(node.get(2)) % 2 == 0).toList());
+                new ArrayList<>(this.cluster.stream().filter(node -> Integer.parseInt(node.get(2)) % 2 == 0).collect(Collectors.toList()));
 
         System.out.println("Available nodes: " + availableNodes);
 
         // sort available nodes ip value using a lambda that uses compareTo
         availableNodes.sort(Comparator.comparing((ArrayList<String> node) -> ShaHasher.getHashString(node.get(0))));
 
-        List<String> node_ips = availableNodes.stream().map(node -> node.get(0)).toList();
+        List<String> node_ips = availableNodes.stream().map(node -> node.get(0)).collect(Collectors.toList());
 
         // print hashed values of nodes ip
-        System.out.println("Hashed values of nodes ip: " + node_ips.stream().map(ShaHasher::getHashString).toList());
+        System.out.println("Hashed values of nodes ip: " + node_ips.stream().map(ShaHasher::getHashString).collect(Collectors.toList()));
 
         int index = Collections.binarySearch(node_ips, filekey, Comparator.comparing(ShaHasher::getHashString));
 
@@ -348,34 +448,120 @@ public class Store {
         return Pair.createPair(nearest_node_ip, nearest_node_port);
     }
 
-
+    /**
+     * Stores enters the cluster
+     * Calls a thread in charge of the joining process
+     */
     public void join() {
-
-        this.udpClusterServer = new StoreUdpServer(this, clusterIp, clusterPort);
-        Thread udpServer = new Thread(this.udpClusterServer);
-        udpServer.start();
 
         MembershipProtocolJoin server = new MembershipProtocolJoin(this);
         Thread thread = new Thread(server);
-
         thread.start();
 
     }
 
-    public void initializeMembership() {
-        System.out.println("This is the first Membership Store");
-
-        ArrayList<String> storeInfo = new ArrayList<String>();
-        storeInfo.add(storeIp);
-        storeInfo.add(Store.STARTING_MEMBERSHIP_COUNTER);
-
-        this.cluster.add(storeInfo);
-
-        String log = storeIp + " " + Store.STARTING_MEMBERSHIP_COUNTER;
-        addLog(log);
-        FileSystem.writeOnFile(membershipLog, log);
+    /**
+     * Starts the multicast udp cluster server 
+     */
+    public void startUdpServer(){
+        this.udpClusterServer = new Thread(new StoreUdpServer(this, clusterIp, clusterPort));
+        
+        udpClusterServer.start();
     }
 
+    /**
+     * Interrupts the Udp server
+     */
+    public void closeUdpServer() {
+        this.udpClusterServer.interrupt();
+    }
+
+    /**
+     * In case no store is in the cluster, this method is in charge of initialize the membership
+     * not only starting the multicast server but also stating it is joining
+     */
+    public void initializeMembership() {
+        this.startUdpServer();
+
+        //Entered the membership, start the Udp serverSocket   
+
+        System.out.println("This is the first Membership Store");
+        
+        updateStoreToCluster(this.storeIp, Store.UPDATE_CLUSTER_JOIN);
+        
+    }
+
+
+    /**
+     * This store is trying to leave the cluster.
+     * It removes itself from the cluster, sends the leave message and closes Udp server
+     */
+    public void leave(){
+        this.updateStoreToCluster(this.storeIp, Store.UPDATE_CLUSTER_LEAVE);
+        this.stopSendingPeriodicMembership();
+
+        InetAddress ip_adressCluster;
+        try {
+            ip_adressCluster = InetAddress.getByName(this.clusterIp);
+            DatagramSocket udpSocket = new DatagramSocket();
+            //Create message to send
+            Message newMessage = new Message("leave", false, this.storeIp, this.storePort, "");
+            SocketsIo.sendUdpMessage(newMessage, udpSocket, ip_adressCluster, this.clusterPort);
+            closeUdpServer();
+            
+            
+        } catch (UnknownHostException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        } catch (SocketException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        } catch (IOException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+
+    }
+
+    /**
+     * This fucntion sends an Udp Message with membership
+     */
+    public void sendPeriodicMembership(){
+        String body = this.convertMembershipToString(false);
+        
+        Message send = new Message("membership", false, this.storeIp,this.storePort ,body );
+        
+        try {
+            DatagramSocket udpSocket = new DatagramSocket();
+            InetAddress address = InetAddress.getByName(this.clusterIp);
+            SocketsIo.sendUdpMessage(send, udpSocket, address, this.clusterPort);
+
+        } catch (IOException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+
+    }
+
+    /**
+     * Starts sending periodic Membership messages
+     */
+    public void startSendingPeriodicMembership(){
+        if(this.periodicMembershipSender == null){
+            this.periodicMembershipSender = new ScheduledThreadPoolExecutor(1);
+            periodicMembershipSender.scheduleAtFixedRate(() -> sendPeriodicMembership(), 0, 60, TimeUnit.SECONDS);
+        }
+
+
+    }
+
+    /**
+     * Stops sending periodic Membership messages
+     */
+    public void stopSendingPeriodicMembership(){
+        this.periodicMembershipSender.shutdown();
+        this.periodicMembershipSender = null;
+    }
 
     public static void main(String[] args) {
         if (args.length != 4) {
@@ -393,6 +579,44 @@ public class Store {
         Store store = new Store(storeIp, storePort, clusterIp, clusterPort);
 
         while (true) {}
+    }
+
+
+
+    /*
+    Message format:
+    List:
+    ip counter
+    ip counter
+    ip counter
+
+    Logs:
+    ip counter
+    ip counter
+    ip counter
+    
+    
+    */
+    public String convertMembershipToString(boolean withClusterList){
+        String body = "";
+
+        if(withClusterList){
+            body += "List:\n";
+
+            for(ArrayList<String> list: this.cluster){
+                body += list.get(0) + " " + list.get(1) +"\n";
+            }
+
+        }
+
+        body += "Logs:\n";
+
+        for(Object log : this.last32Logs.toArray()){
+            body += log.toString() + "\n";
+
+        }
+
+        return body;
     }
 
 }
